<resources>
    <string name="app_name">Photo Prints</string>
    <string name="printsInputTxt">Number of Prints</string>
    <string name="size46">4 x 6 (19 cents)</string>
    <string name="size57">5 x 7 (49 cents)</string>
    <string name="size810">8 x 10 (79 cents)</string>
    <string name="orderButton">Order Prints</string>
    <string name="orderAmount">Your total is:</string>
</resources>
