<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/orderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/orderButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/picNumTxt" />

    <EditText
        android:id="@+id/picNumTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Number of Prints"
        android:inputType="number"
        android:textColor="#E53935"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <RadioButton
        android:id="@+id/size810Radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size810"
        app:layout_constraintEnd_toEndOf="@+id/size57Radio"
        app:layout_constraintStart_toStartOf="@+id/size57Radio"
        app:layout_constraintTop_toBottomOf="@+id/size57Radio" />

    <RadioButton
        android:id="@+id/size46Radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size46"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/picNumTxt" />

    <RadioButton
        android:id="@+id/size57Radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size57"
        app:layout_constraintEnd_toEndOf="@+id/size46Radio"
        app:layout_constraintStart_toStartOf="@+id/size46Radio"
        app:layout_constraintTop_toBottomOf="@+id/size46Radio" />

    <TextView
        android:id="@+id/stuff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/orderAmount"
        android:textAllCaps="true"
        android:textColor="#8E24AA"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderButton" />

    <TextView
        android:id="@+id/orderOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#E0075B"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stuff" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="top"
        android:text="@string/app_name"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textColor="#8E24AA"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>